Fixes some small layout issues

--- a/_includes/css/style.scss
+++ b/_includes/css/style.scss
@@ -205,11 +205,17 @@ $tooltip_background_color: #fff;
 }
 
 .navbar-fixed-top {
-    background-color: rgba(0, 0, 0, 1);
+    background-color: rgba(0, 0, 0, 0.8);
     border-bottom: 0;
+
+    @include box-shadow(0 0 32px rgba(0, 0, 0, 0.8));
 
     .navbar-collapse {
         border-top: 0 none transparent;
+    }
+
+    .navbar-toggle .icon-bar {
+        background-color: #fff;
     }
 
     .navbar-header a.navbar-brand, .navbar-nav > li {
@@ -237,13 +243,11 @@ $tooltip_background_color: #fff;
         opacity: 0;
     }
 
-    @include transition(all 0.2s ease 0s);
+    @include transition(all 0.3s ease 0s);
 }
 
 .navbar-fixed-top.opaque, .navbar-fixed-top.expanded {
-    background-color: rgba(96, 96, 96, 1);
-    @include box-shadow(0 0 32px rgba(0, 0, 0, 0.667));
-
+    background-color: rgba(128, 128, 128, 1);
     @include transition(all 0.3s ease 0s);
 }
 
@@ -252,7 +256,7 @@ $tooltip_background_color: #fff;
  ****************************************/
 
 #footer {
-    padding-bottom: 4em;
+    padding-bottom: 2em;
 
     .subtle {
         font-size: 12px;
@@ -271,26 +275,16 @@ $iphone_width: 368;
 $iphone_bezel_height: 92;
 $iphone_bezel_width: 24;
 $content_percent: 50;
-$content_margin_right: 48;
-$content_margin_left: 215;
 
 #iphone-section {
     border-top-right-radius: 1px; /* required for iOS zoom bug */
     border-top-left-radius: 1px; /* required for iOS zoom bug */
-    z-index: 0;
     padding-top: 90px;
 
     .content {
-        float: left;
         position: relative;
 
-        .align-right {
-            right: 10%;
-        }
-
         .header {
-            z-index: 1;
-
             .title   {
                 display: inline-block;
             }
@@ -326,12 +320,23 @@ $content_margin_left: 215;
                 bottom: -25%;
             }
         }
+    }
+}
 
-        #slides.grabbing {
-            cursor: move;
-            cursor: -webkit-grabbing;
-            cursor: -moz-grabbing;
-            cursor: grabbing;
+body.grabbing {
+    cursor: move;
+    cursor: -webkit-grabbing;
+    cursor: -moz-grabbing;
+    cursor: grabbing;
+
+    #iphone-section {
+        #iphone {
+            #slides {
+                cursor: move;
+                cursor: -webkit-grabbing;
+                cursor: -moz-grabbing;
+                cursor: grabbing;
+            }
         }
     }
 }
@@ -370,6 +375,7 @@ $content_margin_left: 215;
     }
 }
 
+
 /****************************************
  * Contact info
  ****************************************/
@@ -395,6 +401,7 @@ $content_margin_left: 215;
         }
     }
 }
+
 
 /****************************************
  * Background images
@@ -506,6 +513,7 @@ only screen and (min-resolution:2dppx) {
 #iphone-section {
 
     .content {
+        float: none;
         text-align: center;
         width: 100%;
         padding-top: 0px;
@@ -519,7 +527,7 @@ only screen and (min-resolution:2dppx) {
     }
 
     #iphone {
-        margin: 10em auto 0 auto;
+        margin: 2em auto 0 auto;
         width: 100%;
         height: auto;
 
@@ -562,10 +570,6 @@ only screen and (min-resolution:2dppx) {
             #appstore-badge {
                 width: #{$badge_width}px;
                 height: #{$badge_height}px;
-
-                .spacer {
-                    padding-top: 29.722%;
-                }
             }
         }
     }
@@ -713,6 +717,7 @@ only screen and (min-resolution:2dppx) {
     #iphone-section {
 
         .content {
+            float: left;
             text-align: right;
             padding-top: #{$iphone_bezel_height}px;
             padding-right: 5%;
